# Spearit

./: .gitignore  LICENCE  README.md  line_counter.py  tmp  tmp.py
dashboard/: package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  constants.ts  main.css  main.tsx
examples/: simple_server_example.py
scout/: clear_interfaces.sh  run.sh
scout/ebpf/: .gitignore  Makefile  README.md  run.sh
scout/scout_wrapper/: Cargo.toml  README.md  run.sh
scout/scout_wrapper/src/: constants.rs  lib.rs  main.rs  scout_wrapper.rs  terminal_ui.rs
scout/scout_wrapper/src/dynamic/: rules.json
scout/scout_wrapper/src/models/: mod.rs  types.rs
scout/scout_wrapper/src/models/connection/: README.md  connection.rs  fields.rs  message_trait.rs  utils.rs
scout/scout_wrapper/src/models/connection/messages/: handshake.rs
scout/scout_wrapper/src/models/heartbeat/: heartbeat.rs
scout/scout_wrapper/src/models/loader_shm/: shared_memory.rs
scout/scout_wrapper/src/models/logger/: logger.rs
scout/scout_wrapper/src/models/report/: report.rs
scout/scout_wrapper/src/models/rules/: condition.rs  response.rs  rule.rs
scout/scout_wrapper/src/models/rules/dynamic/: data_key.rs  event_type.rs
scout/scout_wrapper/src/models/shared_types/: network_info.rs
spear_head/: README.md  constants.py  main.py  pyrightconfig.json  requirements.txt  run.bat  run.sh  spear_head.py
spear_head/constants/: constants.py  protocol_numbers.json
spear_head/databases/: engine.py
spear_head/models/: logger.py
spear_head/utils/: ai_manager.py  ai_utils.py  campaign.py  types.py  (+10 more)
(+117 files in other folders)
