[package]
name = "scout_wrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8"
cbc = { version = "0.1", features = ["block-padding", "alloc"] }
bytemuck = "1"
x25519-dalek = "2"
rand = "0.9"
sha2 = "0.11.0-rc.3"
rand_core = { version = "0.6", features = ["getrandom"] }
libc = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22.1"
ratatui = "0.29.0"
crossterm = "0.29"
once_cell = "1.21.3"

[build]
rustflags = ["-Awarnings"]
